# gtac_ini

./: .gitignore  CMakeLists.txt  README.md
module/: CMakeLists.txt  Module.cpp
sdk/Helper/: SDKHelper.h
